--- a/src/Frota.Api/Frota.Api.csproj
+++ b/src/Frota.Api/Frota.Api.csproj
@@ -7,11 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers/" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Frota.Application/Frota.Application.csproj" />
+    <ProjectReference Include="../Frota.Infra.Data/Frota.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
